# shangtu

./: .cursorignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  DEVLOG.md  NAMING_REVIEW.md  README.md  index.html
backend/: .dockerignore  .env  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml  start_local_backend.ps1
backend/app/: main.py
backend/migrations/: README  env.py
backend/scripts/: check_image_prompt_invariants.py  export_user_generation_records.py  import_user_generation_records.py  profile_task_queries.py  seed_billing_settings.py  seed_product_catalog.py  seed_prompt_templates.py  simulate_zpay_notify.py  sync_cosyvoice_voices.py  sync_heygen_resources.py  upload_outfit_models.py  upload_product_video_demos.py
backend/tests/: fake_redis.py  test_account_pricing.py  test_admin_overview.py  test_app_security.py  test_asset_router.py  test_billing_service.py  test_core_helpers.py  test_cosyvoice_catalog.py  test_coupon_codes.py  test_dashscope_streaming.py  test_digital_human_assets_service.py  test_digital_human_audio_service.py  test_digital_human_service.py  test_distribution_billing.py  test_distribution_withdrawals.py  test_email_verification.py  test_generation_tasks_service.py  test_heygen_fake_integration.py  test_heygen_task_lifecycle.py  test_heygen_workers.py  test_llm_rate_limit.py  test_logging_config.py  test_login_security.py  test_password_management.py  test_photo_avatar_router.py  test_prompt_invariants.py  test_rate_limit.py  test_sse.py  test_turnstile_provider.py  test_video_tasks_service.py  (+5 more)
(+560 files in other folders)
