[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "oss2>=2.19.1",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=5.3.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "tencentcloud-sdk-python>=3.1.131",
    "uvicorn>=0.49.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests", "app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
